weston_paint_node_ensure_color_transform: Assertion 'it->surf_xform_valid == false' failed
I am seeing a crash with: weston: ../libweston/color.c:217: weston_paint_node_ensure_color_transform: Assertion 'it->surf_xform_valid == false' failed
.
I have seen this happen consistently when trying to make Chrome running under Wine-Wayland fullscreen. It's not trivial to set this up, so I hope the attached information will be enough to resolve this. If not, I am happy to provide further instructions.
The attached log of weston is captured with WAYLAND_DEBUG, including the crash and backtrace at the end: crash-ensure-color-transform.txt